--- a/03-css/04-layout.css
+++ b/03-css/04-layout.css
@@ -17,9 +17,11 @@ body {
 .header {
   background-color: var(--blue);
 }
-
+.content {
+  display: flex;
+  justify-content: space-between;
+}
 .section {
-  display: inline-block;
   width: 75%;
   height: 300px;
   background-color: var(--orange);
