--- a/03-css/05-position.css
+++ b/03-css/05-position.css
@@ -19,8 +19,31 @@
 
 .absolute {
   background-color: var(--maroon);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
 }
 
 .fixed {
   background-color: var(--darkgolden);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+}
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+}
+
+.main .box {
+  width: 300px;
+  height: 400px;
+  margin: 5px;
 }
