Edited the font color and things are working closer to how I want them. Still have some styling thigns to figure out

--- a/06-bootstrap/styles.css
+++ b/06-bootstrap/styles.css
@@ -21,3 +21,10 @@ form > * {
 .box {
   height: 160px;
 }
+.card {
+  color: black;
+}
+.card-title {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
