--- a/03-css/04-layout.css
+++ b/03-css/04-layout.css
@@ -22,6 +22,7 @@ body {
   justify-content: space-between;
 }
 .section {
+  display: inline-block;
   width: 75%;
   height: 300px;
   background-color: var(--orange);
